Segunda versão do Site
Aqui já foram disponibilizadas duas fórmulas e a página inicial.

--- a/formulas.html
+++ b/formulas.html
@@ -32,14 +32,14 @@
                 <input type="checkbox" name="" id="mathButton">
                 <label for="mathButton" id="mathButtonLabel">Matemática</label>
                 <ul class="mathItemList">
-                    <li class="mathListItem">Teorema de Pitágoras</li>
+                    <li class="mathListItem"><a href="formulas/mat/pitagoras.html">Teorema de Pitágoras</a></li>
                 </ul>
             </div>
             <div id="physicsList">
                 <input type="checkbox" name="" id="physicsButton">
                 <label for="physicsButton" id="physicsButtonLabel">Física</label>
                 <ul class="physicsItemList">
-                    <li class="physicsListItem">Fórmula da Força</li>
+                    <li class="physicsListItem"><a href="formulas/fisica/forca.html">Fórmula da Força</a></li>
                 </ul>
             </div>
         </section>
